feat: menyelesaikan halaman create drugs, menambahkan fitur mass destroy drugs, ...
- Menghapus folder img yg tidak perlu
- Menginstall package select2 dan select2 bs 5 theme
- Menampilkan gambar di halaman show, edit dan index drugs

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,4 +9,7 @@
 
 // Data Tables
 @import '~datatables.net-bs5/css/dataTables.bootstrap5';
+@import "~datatables.net-buttons-bs5/css/buttons.bootstrap5.css";
 @import '~datatables.net-responsive-bs5/css/responsive.bootstrap5.min';
+@import "~select2/src/scss/core";
+@import "~select2-bootstrap-5-theme/src/include-all";
