--- a/public/css/style.css
+++ b/public/css/style.css
@@ -642,7 +642,7 @@ a:focus {
         font-size: 0.85rem;
         display: inline;
     }
-    .sidebar .nav-item .nav-link[data-toggle="collapse"]::after {
+    .sidebar .nav-item .nav-link[data-bs-toggle="collapse"]::after {
         width: 1rem;
         text-align: center;
         float: right;
@@ -652,7 +652,7 @@ a:focus {
         content: "\f107";
         font-family: "Font Awesome 5 Free";
     }
-    .sidebar .nav-item .nav-link[data-toggle="collapse"].collapsed::after {
+    .sidebar .nav-item .nav-link[data-bs-toggle="collapse"].collapsed::after {
         content: "\f105";
     }
     .sidebar .sidebar-brand .sidebar-brand-icon i {
@@ -710,7 +710,7 @@ a:focus {
     .sidebar.toggled .nav-item .nav-link i {
         margin-right: 0;
     }
-    .sidebar.toggled .nav-item .nav-link[data-toggle="collapse"]::after {
+    .sidebar.toggled .nav-item .nav-link[data-bs-toggle="collapse"]::after {
         display: none;
     }
     .sidebar.toggled .sidebar-brand .sidebar-brand-icon i {
@@ -748,7 +748,7 @@ a:focus {
 .sidebar-light .nav-item .nav-link:hover i {
     color: #6e707e;
 }
-.sidebar-light .nav-item .nav-link[data-toggle="collapse"]::after {
+.sidebar-light .nav-item .nav-link[data-bs-toggle="collapse"]::after {
     color: #b7b9cc;
 }
 .sidebar-light .nav-item.active .nav-link {
@@ -791,7 +791,7 @@ a:focus {
 .sidebar-dark .nav-item .nav-link:hover i {
     color: #fff;
 }
-.sidebar-dark .nav-item .nav-link[data-toggle="collapse"]::after {
+.sidebar-dark .nav-item .nav-link[data-bs-toggle="collapse"]::after {
     color: rgba(255, 255, 255, 0.5);
 }
 .sidebar-dark .nav-item.active .nav-link {
@@ -871,12 +871,12 @@ a:focus {
 .card .card-header .dropdown .dropdown-menu {
     line-height: 1.5;
 }
-.card .card-header[data-toggle="collapse"] {
+.card .card-header[data-bs-toggle="collapse"] {
     text-decoration: none;
     position: relative;
     padding: 0.75rem 3.25rem 0.75rem 1.25rem;
 }
-.card .card-header[data-toggle="collapse"]::after {
+.card .card-header[data-bs-toggle="collapse"]::after {
     position: absolute;
     right: 0;
     top: 0;
@@ -887,10 +887,10 @@ a:focus {
     font-family: "Font Awesome 5 Free";
     color: #d1d3e2;
 }
-.card .card-header[data-toggle="collapse"].collapsed {
+.card .card-header[data-bs-toggle="collapse"].collapsed {
     border-radius: 0.35rem;
 }
-.card .card-header[data-toggle="collapse"].collapsed::after {
+.card .card-header[data-bs-toggle="collapse"].collapsed::after {
     content: "\f105";
 }
 .chart-area {
@@ -1028,6 +1028,7 @@ form.user .btn-user {
     line-height: 1;
     width: 12.5rem;
 }
+
 @-webkit-keyframes noise-anim {
     0% {
         clip: rect(49px, 9999px, 40px, 0);
