--- a/public/css/mediclo.css
+++ b/public/css/mediclo.css
@@ -19,3 +19,15 @@
     font-size: 1.5rem;
     border-radius: 0.75rem;
 }
+
+.btn-primary {
+    color: #fff;
+    background-color: #50c8d9;
+    border-color: #50c8d9;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #46adbb;
+    border-color: #2ac3d7;
+}
